# kuma-blog

./: .gitignore  .nojekyll  Kuma_AI_daily_newsletter_2025-05-25.md  LICENSE  README.md  ask-user-question-playground.html  landing.html  test-ai-kuma.md  test-ai.md  {{ $json["filePath"] }}
.github/: dependabot.yml
AI-blogs/: agent-harness-deep-dive.md  ai-inference-api-design-at-scale.md  ai-inference-batching-explained.md  anthropic-skills-guide-summary.md  boris-cherny-customize-claude-code.md  boris-cherny-on-building-with-ai.md  chess-system-design.md  claude-code-agent-teams.md  claude-code-memory-architecture.md  dario-amodei-end-of-exponential-dwarkesh-2026.md  design-chatgpt-ai-inference-platform.md  design-crossword-puzzle-solver.md  design-google-calendar.md  design-in-memory-database.md  design-multi-tenant-url-shortener.md  design-online-ide.md  (+15 more)
AI/kuma-ai-agents/michi-telegram-bot/: .env.example  README.md  REFACTORING_SUMMARY.md  TESTING.md  bot.py  config.py  conftest.py  models.py  pyproject.toml  requirements.txt  start_bot.sh  test_claude_executor.py  test_config.py  test_full_integration.py  test_git_executor.py  test_orchestrator_git.py  test_state_manager.py
AI/kuma-ai-agents/michi-telegram-bot/executors/: __init__.py  claude_executor.py  git_executor.py
AI/kuma-ai-agents/michi-telegram-bot/handlers/: callback_handler.py  command_handler.py  message_handler.py
AI/kuma-ai-agents/michi-telegram-bot/parsers/: __init__.py  intent_parser.py
AI/kuma-ai-agents/michi-telegram-bot/workflows/: __init__.py  orchestrator.py  state_manager.py
(+777 files in other folders)
