[project]
name = "michi-telegram-bot"
version = "0.1.0"
description = "Telegram bot for Claude Code automation"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot==21.0.1",
    "python-dotenv==1.0.0",
    "pydantic==2.10.0",
    "pydantic-settings==2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
